lzanding page js

--- a/styles.css
+++ b/styles.css
@@ -10,10 +10,10 @@ h1 {
     font-weight: 500;
 }
 
-#focus {
+#focusP {
     margin-bottom: 50px;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 24px;\
+    font-size: 24px;
     letter-spacing: 0.5px;
 }
 
